--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "axios": "^0.19.0",
+        "babel-preset-stage-2": "^6.24.1",
         "cross-env": "^5.1",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
-        "sass-loader": "^7.1.0"
+        "sass-loader": "^7.1.0",
+        "vue-router": "^3.1.3",
+        "vue-template-compiler": "^2.6.10",
+        "vuex": "^3.1.1"
+    },
+    "dependencies": {
+        "bootstrap-vue": "^2.0.4",
+        "sweetalert2": "^8.18.6",
+        "vue": "^2.6.10",
+        "vue-select": "^3.2.0"
     }
 }
