--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "axios": "^0.19.0",
         "babel-preset-stage-2": "^6.24.1",
         "cross-env": "^5.1",
+        "es6-promise": "^4.2.8",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
         "resolve-url-loader": "^2.3.1",
